# explicit-memset

./: CMakeLists.txt  README.md  explicit-memset.c  explicit-memsetConfig.cmake.in
.github/workflows/: build-test.yml  clang-format.yml  reformat-clang-format.yml  stale.yml
include/ay/: explicit-memset.h
src/ay/: explicit-memset.c
tests/: CMakeLists.txt  explicit-memset.test.c  explicit-memset_win32.test.c
